<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_send_image"
        android:orderInCategory="100"
        android:title="@string/action_send_image"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_send_offer"
        android:orderInCategory="100"
        android:title="@string/action_send_offer"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_view_offers"
        android:orderInCategory="100"
        android:title="@string/action_view_offers"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_block_user"
        android:orderInCategory="100"
        android:title="@string/action_block_user"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_delete_chat"
        android:orderInCategory="100"
        android:title="@string/action_delete_chat"
        app:showAsAction="never" />
</menu>