<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:text="@string/dialog_title_send_offer"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:scaleType="center"
        android:background="#FFFFBB33"
        android:textSize="30dp"
        android:gravity="center_vertical|center_horizontal" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_select_offer"
        android:textSize="20dp" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/offerList" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_information_offer"
        android:textSize="20dp"
        android:id="@+id/tvSetOffer" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/offerInformation"
        android:gravity="center_vertical|center_horizontal" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/tvErrorOffer"
        android:gravity="center"
        android:text="@string/dialog_error_send_offer_no_offer"
        android:textColor="#ff0000"
        android:textStyle="italic" />
</LinearLayout>