<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Login_Register.RegistrationActivity2"
    android:weightSum="1"
    android:background="@color/back_color" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/registration_profile_foto"
        android:id="@+id/textView3"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/app_header_color" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:id="@+id/imageView"
        android:layout_gravity="center_horizontal"
        android:baselineAlignBottom="false"
        android:contextClickable="false"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/registration_search_button"
        android:id="@+id/gallerySearch"
        android:layout_gravity="center_horizontal"
        android:onClick="addPhoto"
        android:background="@color/login_button_color"
        android:textColor="@color/app_header_color" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="15dp">

        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
            android:name="com.google.android.gms.maps.MapFragment"
            android:id="@+id/registrationMap"
            android:layout_width="match_parent"
            android:layout_height="250dp" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/registration_end_registrer"
            android:id="@+id/endRegister"
            android:layout_gravity="center_horizontal"
            android:background="@color/login_button_color"
            android:onClick="endRegistrer"
            android:textColor="@color/app_header_color"
            android:layout_marginTop="10dp" />
    </LinearLayout>

</LinearLayout>